--- a/stylesheets/tstpackage.less
+++ b/stylesheets/tstpackage.less
@@ -4,10 +4,12 @@
 // for a full listing of what's available.
 @import "ui-variables";
 
-.covered {
-  background-color : green;
-}
+.editor .gutter {
+  .covered {
+    border-right: green 3px solid;
+  }
 
-.not-covered {
-  background-color : red;
+  .not-covered {
+    border-right : green 3px solid;
+  }
 }
