--- a/stylesheets/tstpackage.less
+++ b/stylesheets/tstpackage.less
@@ -5,11 +5,11 @@
 @import "ui-variables";
 
 .editor .gutter {
-  .covered {
+  div.covered {
     border-right: green 3px solid;
   }
 
-  .not-covered {
+  div.not-covered {
     border-right : green 3px solid;
   }
 }
