--- a/stylesheets/tstpackage.less
+++ b/stylesheets/tstpackage.less
@@ -6,10 +6,10 @@
 
 .editor .gutter {
   div.covered {
-    border-right: green 3px solid;
+    background: green ;
   }
 
   div.not-covered {
-    border-right : green 3px solid;
+    background : red;
   }
 }
