--- a/stylesheets/tstpackage.less
+++ b/stylesheets/tstpackage.less
@@ -4,7 +4,7 @@
 // for a full listing of what's available.
 @import "ui-variables";
 
-.editor--private .gutter {
+atom-text-editor::shadow .gutter {
   div.covered {
     background: green ;
   }
