--- a/stylesheets/tstpackage.less
+++ b/stylesheets/tstpackage.less
@@ -6,7 +6,8 @@
 
 atom-text-editor::shadow .gutter {
   div.covered {
-    background: green ;
+    background: green;
+    color: #BBB;
   }
 
   div.not-covered {
